<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="app_name">Joyrill</string>
    <string name="app_telstr">Tel:</string>
    <string name="app_dbv">database version:</string>
    <string name="app_webstr">website:</string>
    <string name="app_msg_exit">Log out?</string>
    <string name="nonetwork">No network signal</string>
    <string name="noconnected">server error</string>
    <string name="nouser">Username or Password error</string>
    <string name="status_on">Open</string>
    <string name="status_off">Close</string>
    <string name="status_error">error data</string>
    <string name="item_open">Open</string>
    <string name="item_close">Close</string>
    <string name="item_stop">Stop</string>
    <string name="item_run">Run</string>
    <string name="item_power">Power</string>
    <string name="item_mute">Mute</string>
    <string name="item_more">>>></string>
    <string name="device_socket">Socket</string>
    <string name="device_light">Lighting</string>
    <string name="device_aircondition">Air</string>

    <!-- login_ui -->
    <string name="login_ui_login_title">Login</string>
    <string name="login_ui_login_username">username</string>
    <string name="login_ui_login_password">password</string>
    <string name="login_ui_login_internet">WAN Address</string>
    <string name="login_ui_login_interant">LAN Address</string>
    <string name="login_ui_login_port">Port</string>
    <string name="login_ui_login_type">NetType</string>
    <string name="login_ui_login_btn">login</string>
    <string name="login_ui_login_savepassword">rember password</string>
    <string name="login_ui_login_autologin">auto login</string>
    <string name="login_ui_demo_btn">Demos</string>
    <string name="login_ui_login_submit">Submit</string>
    <string name="msg_btn_yes">Submit</string>
    <string name="msg_btn_no">Cancel</string>
    <string name="menu_ui_area">Area</string>
    <string name="menu_ui_type">Type</string>
    <string name="menu_ui_scene">Scene</string>
    <string name="menu_ui_clock">Time</string>
    <string name="menu_ui_music">Music</string>
    <string name="menu_ui_monitor">Monitor</string>
    <string name="menu_ui_security">Security</string>
    <string name="menu_ui_weather">Weather</string>
    <string name="menu_ui_setting">Setting</string>
    <string name="security_ui_outdoorarming">outdoor arming</string>
    <string name="security_ui_outdoordisarming">outdoor disarming</string>
    <string name="security_ui_indoorarming">indoor arming</string>
    <string name="security_ui_indoordisarming">indoor disarming</string>
    <string name="security_ui_immediate">immediate</string>
    <string name="security_ui_delay">delay</string>
    <string name="tv_volume_plus">V+</string>
    <string name="tv_volume_minus">V-</string>
    <string name="tv_channnel_plus">P+</string>
    <string name="tv_channel_minus">P-</string>
    <string name="tv_ok">Ok</string>
    <string name="tv_menu">Menu</string>
    <string name="tv_back">Back</string>
    <string name="tv_mute">Mute</string>
    <string name="tv_standby">Standby</string>
    <string name="tv_signal">Singnal</string>
    <string name="tv_open">Open</string>
    <string name="tv_close">Close</string>
    <string name="air_open">Open</string>
    <string name="air_close">Close</string>
    <string name="air_leftandrightwind">LR</string>
    <string name="air_upanddownwind">Ud</string>
    <string name="air_brute">Strong</string>
    <string name="air_sleep">Sleep</string>
    <string name="air_refrigeration">Refrigeration</string>
    <string name="air_heating">Heating</string>
    <string name="air_auto">Auto</string>
    <string name="dvd_menu">Menu</string>
    <string name="dvd_ok">OK</string>
    <string name="dvd_mute">Mute</string>
    <string name="dvd_standby">Standby</string>
    <string name="dvd_previous">Pre</string>
    <string name="dvd_next">Next</string>
    <string name="dvd_volume_plus">V+</string>
    <string name="dvd_volume_minus">V-</string>
    <string name="dvd_schema">Model</string>
    <string name="dvd_play">Play</string>
    <string name="dvd_pause">Pause</string>
    <string name="dvd_ff">FF</string>
    <string name="dvd_rew">REW</string>
    <string name="setting_about_tel">Tel</string>
    <string name="setting_about_website">Website</string>
    <string name="setting_about_address">Addr</string>
    <string name="setting_save">Save</string>
    <string name="setting_remberpassword">Rember Password</string>
    <string name="setting_auto_login">Auto Login</string>
    <string name="setting_host_date">Host Date</string>
    <string name="setting_host_time">Host Time</string>
    <string name="setting_user_id">UserID</string>
    <string name="setting_edit">Edit</string>
    <string name="setting_sync">Sync</string>
    <string name="setting_date_error">Get Date Error</string>
    <string name="setting_time_error">Get Time Error</string>
    <string name="setting_status_on">On</string>
    <string name="setting_status_off">Off</string>
    
    <string name="network_not_connected">network_not_connected</string>
    <string name="xml_parser_failed">xml_parser_failed</string>
    <string name="io_exception_error">io_exception_error</string>
    <string name="http_status_code_error">http_status_code_error：%d</string>
    <string name="http_exception_error">http_exception_error</string>
    <string name="socket_exception_error">socket_exception_error</string>
    <string name="app_run_code_error">app_run_code_error</string>
    
    <!-- about -->
    <string name="about_telephone">400\-646\-7866</string>
    <string name="about_website">http://www.joyrill.com</string>
    <string name="about_address">GuangZhou TianHe SoftWare</string>
    <string name="imagedesc"></string>

    
    <string name="connecting">正在连接...</string>
    <string name="videoing">录像中...</string>
    <string name="main_show_back">再按一次，退出程序！</string>
    <string name="ptz_control">请按菜单键,进行云台控制</string>
    <string name="pppp_status_disconnect">断线</string>
    <string name="exit_show">   提示：</string>
    <string name="exit_play_show">确认退出播放?</string>
    <string name="str_ok">确定</string>
    <string name="str_cancel">取消</string>
    <string name="eixt_show_toast">本地录像中，请先停止再退出！</string>
    <string name="exit">退出</string>
    <string name="exit_alert">确认退出吗 ?</string>
    <string name="ptz_default_vedio_params">视频参数恢复默认值</string>
    <string name="p2p_relay_mode_time_out">转发模式观看,剩余时间:</string>
	<string name="str_second">秒</string>
	<string name="p2p_view_time_out">已到观看时间</string>
	<string name="alerm_motion_alarm">移动侦测报警</string>
	<string name="alerm_gpio_alarm">IO联动报警</string>
</resources>