<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/about"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:alignmentMode="alignMargins"
    android:columnCount="2"
    android:rowCount="2"
    android:useDefaultMargins="true" >

    <TextView
        style="@style/text_style"
        android:text="@string/setting_about_tel" />

    <TextView
        style="@style/text_style"
        android:text="@string/about_telephone" />

    <TextView
        style="@style/text_style"
        android:text="@string/setting_about_website" />

    <TextView
        style="@style/text_style"
        android:text="@string/about_website" />

    <TextView
        style="@style/text_style"
        android:text="@string/setting_about_address" />

    <TextView
        style="@style/text_style"
        android:text="@string/about_address"
        android:width="300dp" />

</GridLayout>