<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">
    
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1">
	    <Button 
	        android:id="@+id/outdoorArming"
	        android:layout_width="200dp"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:background="@drawable/security_bg_style"
	        android:layout_marginLeft="20dp"
	        android:text="@string/security_ui_outdoorarming"/>
	    <Button 
	        android:id="@+id/outdoorDisarming"
	        android:layout_width="200dp"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:background="@drawable/security_bg_style"
	        android:layout_toRightOf="@+id/outdoorArming"
	        android:layout_marginLeft="20dp"
	        android:text="@string/security_ui_outdoordisarming"/>

	    <Button
	        android:id="@+id/indoorArming"
	        android:layout_width="200dp"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:background="@drawable/security_bg_style"
	        android:layout_marginRight="20dp"
	        android:layout_alignBottom="@+id/indoorDisarming"
	        android:layout_toLeftOf="@id/indoorDisarming" 
	        android:text="@string/security_ui_indoorarming"/>

	    <Button 
	        android:id="@+id/indoorDisarming"
	        android:layout_width="200dp"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:layout_alignParentRight="true"
	        android:layout_marginRight="20dp"
	        android:background="@drawable/security_bg_style"
	        android:text="@string/security_ui_indoordisarming"/>
	</RelativeLayout>
	<RadioGroup
	    android:id="@+id/armingGroup"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:layout_gravity="center"
	    android:orientation="horizontal"
	    android:gravity="center">
	        <RadioButton 
	            android:id="@+id/armingImmediate"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/security_ui_immediate"
	            android:checked="true"
	            android:layout_marginRight="25dp"/>
	        <RadioButton 
	            android:id="@+id/armingDelay"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="25dp"
	            android:text="@string/security_ui_delay"/>
	    </RadioGroup>
</LinearLayout>
