<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="500dp"
        android:layout_height="450dp"
        android:layout_centerInParent="true"
        android:background="@drawable/login_bg01"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/layoutType"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:background="@null"
                android:contentDescription="@string/imagedesc"
                android:src="@drawable/login_setting_btn" 
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/loginLogo"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:contentDescription="@string/imagedesc"
                android:src="@drawable/login_bg02" />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_below="@id/loginLogo"
                android:contentDescription="@string/imagedesc"
                android:src="@drawable/login_bg03" />
        </RelativeLayout>

        <GridLayout
            android:id="@+id/loginLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="4" 
             >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/login_ui_login_username"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/userName"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:paddingLeft="10dp"
                android:background="@drawable/login_bg04"
                android:inputType="none"
                android:singleLine="true" />

            <TextView
                android:layout_width="75dp"
                android:layout_gravity="right"
                android:layout_height="wrap_content"
                android:text="@string/login_ui_login_password"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:paddingRight="10dp"
                android:background="@drawable/login_bg04"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/loginBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="25dp"
                android:background="@drawable/login_button_bg_style"
                android:text="@string/login_ui_login_btn" />

            <Button
                android:id="@+id/demoBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:background="@drawable/login_bg05"
                android:text="@string/login_ui_demo_btn" />

            <CheckBox
                android:id="@+id/savepassword"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/login_ui_login_savepassword" />

            <CheckBox
                android:id="@+id/autologin"
                android:layout_width="150dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/login_ui_login_autologin" />
        </GridLayout>

        <GridLayout
            android:id="@+id/settingLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="5"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_ui_login_internet" />

            <EditText
                android:id="@+id/internetText"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:background="@drawable/login_bg04"
                android:inputType="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_ui_login_interant" />

            <EditText
                android:id="@+id/interantText"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:background="@drawable/login_bg04"
                android:inputType="@null"
                android:textSize="@dimen/activity_horizontal_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_ui_login_port" />

            <EditText
                android:id="@+id/portText"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:background="@drawable/login_bg04"
                android:inputType="@null"
                android:textSize="@dimen/activity_horizontal_margin" />
			 <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_ui_login_type" />

            <Spinner
                android:id="@+id/typeText"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:background="@drawable/login_bg04"
                android:inputType="@null"
                android:textSize="@dimen/activity_horizontal_margin" />
            <Button
                android:id="@+id/setUrlBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:background="@drawable/login_bg05"
                android:text="@string/login_ui_login_submit" />
        </GridLayout>
    </LinearLayout>

</RelativeLayout>