<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/component_bg"
    android:layout_margin="10dp"
    android:gravity="center_vertical"
    android:orientation="horizontal" >
    	<TextView 
    	    android:id="@+id/timerName"
    	    android:layout_width="100dp"
    	    android:layout_height="wrap_content"/>
    	<ImageView 
    	    android:id="@+id/timerimgIco"
    	    android:layout_width="85dp"
    	    android:layout_height="100dp"
    	    android:contentDescription="@string/imagedesc"/>
    	<Button 
    	    android:id="@+id/timerOpen"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_marginLeft="30dp"
    	    android:background="@drawable/button_bg_style"
    	    android:text="@string/item_open"/>
    	<Button 
    	    android:id="@+id/timerClose"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_marginLeft="30dp"
    	    android:background="@drawable/button_bg_style"
    	    android:text="@string/item_close"/>    	
</LinearLayout>
