<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="500dp"
    android:layout_height="70dp"
    android:layout_gravity="center"
    android:gravity="center_vertical"
    android:layout_margin="10dp"
    android:background="@drawable/component_bg"
    android:orientation="horizontal" >

    	<TextView
    	    android:id="@+id/basetwowayTitle"
    	    android:layout_width="120dp"
    	    android:layout_height="wrap_content"
    	    android:gravity="center"
    	    android:textSize="20sp"/>

    	<ImageView 
    	    android:id="@+id/basetwowayImage"
    	    android:layout_width="80dp"
    	    android:layout_height="60dp"
    	    android:contentDescription="@string/imagedesc"/>
		<Switch 
		    android:id="@+id/basetwowaySwitch"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="20dp"
		    android:textOn="@string/setting_status_on"
		    android:textOff="@string/setting_status_off"/>
        <TextView 
            android:id="@+id/basetwowayStatus"
            android:layout_marginLeft="40dp"
            android:textSize="20sp"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"/> 		
</LinearLayout>
