<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="500dp"
    android:layout_height="70dp"
    android:layout_gravity="center"
    android:gravity="center_vertical"
    android:layout_margin="10dp"
    android:background="@drawable/component_bg"
    android:orientation="horizontal" >

    	<TextView
    	    android:id="@+id/rollershutterTitle"
    	    android:layout_width="120dp"
    	    android:layout_height="wrap_content"
    	    android:gravity="center"
    	    android:textSize="20dp"/>

    	<ImageView 
    	    android:id="@+id/rollershutterImage"
    	    android:layout_width="80dp"
    	    android:layout_height="60dp"
    	    android:contentDescription="@string/imagedesc"/>
    	<Button 
    	    android:id="@+id/rollershutterButtonOpen"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_marginLeft="10dp"
    	    android:background="@drawable/button_bg_style"
    	    android:text="@string/item_open"/>
    	<Button 
    	    android:id="@+id/rollershutterButtonClose"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_marginLeft="10dp"
    	    android:background="@drawable/button_bg_style"
    	    android:text="@string/item_close"/>
</LinearLayout>
